_generated-doc/3.27/config/quarkus-rest-client-config_quarkus.rest-client.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-rest-client-config_quarkus-rest-client-removes-trailing-slash]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-removes-trailing-slash[`quarkus.rest-client.removes-trailing-slash`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.removes-trailing-slash+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If true, the extension will automatically remove the trailing slash in the paths if any. This property is not applicable to the RESTEasy Client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_REMOVES_TRAILING_SLASH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_REMOVES_TRAILING_SLASH+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

a| [[quarkus-rest-client-config_quarkus-rest-client-multipart-post-encoder-mode]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-multipart-post-encoder-mode[`quarkus.rest-client.multipart-post-encoder-mode`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.multipart-post-encoder-mode+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Mode in which the form data are encoded. Possible values are `HTML5`, `RFC1738` and `RFC3986`. The modes are described in the link:https://netty.io/4.1/api/io/netty/handler/codec/http/multipart/HttpPostRequestEncoder.EncoderMode.html[Netty documentation]

By default, Rest Client Reactive uses RFC1738.

This property is not applicable to the RESTEasy Client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_MULTIPART_POST_ENCODER_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_MULTIPART_POST_ENCODER_MODE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-proxy-address]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-proxy-address[`quarkus.rest-client.proxy-address`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.proxy-address+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
A string value in the form of `:` that specifies the HTTP proxy server hostname (or IP address) and port for requests of clients to use.

Can be overwritten by client-specific settings.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_PROXY_ADDRESS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_PROXY_ADDRESS+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-proxy-user]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-proxy-user[`quarkus.rest-client.proxy-user`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.proxy-user+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Proxy username, equivalent to the http.proxy or https.proxy JVM settings.

Can be overwritten by client-specific settings.

This property is not applicable to the RESTEasy Client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_PROXY_USER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_PROXY_USER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-proxy-password]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-proxy-password[`quarkus.rest-client.proxy-password`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.proxy-password+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Proxy password, equivalent to the http.proxyPassword or https.proxyPassword JVM settings.

Can be overwritten by client-specific settings.

This property is not applicable to the RESTEasy Client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_PROXY_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_PROXY_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-non-proxy-hosts]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-non-proxy-hosts[`quarkus.rest-client.non-proxy-hosts`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.non-proxy-hosts+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Hosts to access without proxy, similar to the http.nonProxyHosts or https.nonProxyHosts JVM settings. Please note that unlike the JVM settings, this property is empty by default.

Can be overwritten by client-specific settings.

This property is not applicable to the RESTEasy Client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_NON_PROXY_HOSTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_NON_PROXY_HOSTS+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-connect-timeout]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-connect-timeout[`quarkus.rest-client.connect-timeout`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.connect-timeout+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
A timeout in milliseconds that REST clients should wait to connect to the remote endpoint.

Can be overwritten by client-specific settings.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_CONNECT_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_CONNECT_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--
|long
|`+++15000+++`

a| [[quarkus-rest-client-config_quarkus-rest-client-read-timeout]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-read-timeout[`quarkus.rest-client.read-timeout`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.read-timeout+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
A timeout in milliseconds that REST clients should wait for a response from the remote endpoint.

Can be overwritten by client-specific settings.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_READ_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_READ_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--
|long
|`+++30000+++`

a| [[quarkus-rest-client-config_quarkus-rest-client-disable-contextual-error-messages]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-disable-contextual-error-messages[`quarkus.rest-client.disable-contextual-error-messages`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.disable-contextual-error-messages+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If true, the REST clients will not provide additional contextual information (like REST client class and method names) when exception occurs during a client invocation.

This property is not applicable to the RESTEasy Client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_DISABLE_CONTEXTUAL_ERROR_MESSAGES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_DISABLE_CONTEXTUAL_ERROR_MESSAGES+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-rest-client-config_quarkus-rest-client-user-agent]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-user-agent[`quarkus.rest-client.user-agent`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.user-agent+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Default configuration for the HTTP user-agent header to use in all REST clients.

Can be overwritten by client-specific settings.

This property is not applicable to the RESTEasy Client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_USER_AGENT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_USER_AGENT+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-headers-header-name]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-headers-header-name[`quarkus.rest-client.headers."header-name"`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.headers."header-name"+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The HTTP headers that should be applied to all requests of the rest client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_HEADERS__HEADER_NAME_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_HEADERS__HEADER_NAME_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|

a| [[quarkus-rest-client-config_quarkus-rest-client-hostname-verifier]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-hostname-verifier[`quarkus.rest-client.hostname-verifier`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.hostname-verifier+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The class name of the host name verifier. The class must have a public no-argument constructor.

Can be overwritten by client-specific settings.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_HOSTNAME_VERIFIER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_HOSTNAME_VERIFIER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-connection-ttl]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-connection-ttl[`quarkus.rest-client.connection-ttl`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.connection-ttl+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The time in ms for which a connection remains unused in the connection pool before being evicted and closed. A timeout of `0` means there is no timeout.

Can be overwritten by client-specific settings.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_CONNECTION_TTL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_CONNECTION_TTL+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a| [[quarkus-rest-client-config_quarkus-rest-client-connection-pool-size]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-connection-pool-size[`quarkus.rest-client.connection-pool-size`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.connection-pool-size+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The size of the connection pool for this client.

Can be overwritten by client-specific settings.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_CONNECTION_POOL_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_CONNECTION_POOL_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|int
|`+++50+++`

a| [[quarkus-rest-client-config_quarkus-rest-client-keep-alive-enabled]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-keep-alive-enabled[`quarkus.rest-client.keep-alive-enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.keep-alive-enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If set to false disables the keep alive completely.

Can be overwritten by client-specific settings.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_KEEP_ALIVE_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_KEEP_ALIVE_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

a| [[quarkus-rest-client-config_quarkus-rest-client-max-redirects]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-max-redirects[`quarkus.rest-client.max-redirects`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.max-redirects+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The maximum number of redirection a request can follow.

Can be overwritten by client-specific settings.

This property is not applicable to the RESTEasy Client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_MAX_REDIRECTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_MAX_REDIRECTS+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a| [[quarkus-rest-client-config_quarkus-rest-client-follow-redirects]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-follow-redirects[`quarkus.rest-client.follow-redirects`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.follow-redirects+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
A boolean value used to determine whether the client should follow HTTP redirect responses.

Can be overwritten by client-specific settings.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_FOLLOW_REDIRECTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_FOLLOW_REDIRECTS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a| [[quarkus-rest-client-config_quarkus-rest-client-same-origin-redirect-blocked-headers]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-same-origin-redirect-blocked-headers[`quarkus.rest-client.same-origin-redirect-blocked-headers`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.same-origin-redirect-blocked-headers+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The set of HTTP headers that are removed on same-origin redirect responses.

When not set, the Vert.x default is used.

Can be overwritten by client-specific settings.

This property is not applicable to the RESTEasy Client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_SAME_ORIGIN_REDIRECT_BLOCKED_HEADERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_SAME_ORIGIN_REDIRECT_BLOCKED_HEADERS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|`+++cookie+++`, `+++content-length+++`

a| [[quarkus-rest-client-config_quarkus-rest-client-cross-origin-redirect-blocked-headers]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-cross-origin-redirect-blocked-headers[`quarkus.rest-client.cross-origin-redirect-blocked-headers`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.cross-origin-redirect-blocked-headers+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The set of HTTP headers that are removed on cross-origin redirect responses.

When not set, the Vert.x default is used.

Can be overwritten by client-specific settings.

This property is not applicable to the RESTEasy Client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_CROSS_ORIGIN_REDIRECT_BLOCKED_HEADERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_CROSS_ORIGIN_REDIRECT_BLOCKED_HEADERS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|`+++authorization+++`, `+++cookie+++`, `+++proxy-authorization+++`, `+++content-length+++`

a| [[quarkus-rest-client-config_quarkus-rest-client-providers]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-providers[`quarkus.rest-client.providers`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.providers+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Fully-qualified provider classnames to include in the client. The equivalent of the `@RegisterProvider` annotation.

Can be overwritten by client-specific settings.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_PROVIDERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_PROVIDERS+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-scope]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-scope[`quarkus.rest-client.scope`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.scope+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The CDI scope to use for injections of REST client instances. Value can be either a fully qualified class name of a CDI scope annotation (such as "jakarta.enterprise.context.ApplicationScoped") or its simple name (such as"ApplicationScoped").

Default scope for the rest-client extension is "Dependent" (which is the spec-compliant behavior).

Default scope for the rest-client-reactive extension is "ApplicationScoped".

Can be overwritten by client-specific settings.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_SCOPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_SCOPE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-query-param-style]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-query-param-style[`quarkus.rest-client.query-param-style`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.query-param-style+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
An enumerated type string value with possible values of "MULTI_PAIRS" (default), "COMMA_SEPARATED", or "ARRAY_PAIRS" that specifies the format in which multiple values for the same query parameter is used.

Can be overwritten by client-specific settings.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_QUERY_PARAM_STYLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_QUERY_PARAM_STYLE+++`
endif::add-copy-button-to-env-var[]
--
a|`multi-pairs`, `comma-separated`, `array-pairs`
|

a| [[quarkus-rest-client-config_quarkus-rest-client-verify-host]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-verify-host[`quarkus.rest-client.verify-host`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.verify-host+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Set whether hostname verification is enabled. Default is enabled. This setting should not be disabled in production as it makes the client vulnerable to MITM attacks.

Can be overwritten by client-specific settings.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_VERIFY_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_VERIFY_HOST+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a| [[quarkus-rest-client-config_quarkus-rest-client-trust-store]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-trust-store[`quarkus.rest-client.trust-store`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.trust-store+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The trust store location. Can point to either a classpath resource or a file.

Can be overwritten by client-specific settings.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_TRUST_STORE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_TRUST_STORE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-trust-store-password]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-trust-store-password[`quarkus.rest-client.trust-store-password`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.trust-store-password+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The trust store password.

Can be overwritten by client-specific settings.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_TRUST_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_TRUST_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-trust-store-type]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-trust-store-type[`quarkus.rest-client.trust-store-type`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.trust-store-type+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The type of the trust store. Defaults to "JKS".

Can be overwritten by client-specific settings.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_TRUST_STORE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_TRUST_STORE_TYPE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-key-store]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-key-store[`quarkus.rest-client.key-store`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.key-store+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The key store location. Can point to either a classpath resource or a file.

Can be overwritten by client-specific settings.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_KEY_STORE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_KEY_STORE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-key-store-password]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-key-store-password[`quarkus.rest-client.key-store-password`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.key-store-password+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The key store password.

Can be overwritten by client-specific settings.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_KEY_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_KEY_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-key-store-type]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-key-store-type[`quarkus.rest-client.key-store-type`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.key-store-type+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The type of the key store. Defaults to "JKS".

Can be overwritten by client-specific settings.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_KEY_STORE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_KEY_STORE_TYPE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-tls-configuration-name]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-tls-configuration-name[`quarkus.rest-client.tls-configuration-name`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.tls-configuration-name+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The name of the TLS configuration to use.

If a name is configured, it uses the configuration from `quarkus.tls.<name>.++*++` If a name is configured, but no TLS configuration is found with that name then an error will be thrown. The default TLS configuration will be ignored.

If no named TLS configuration is set, then the key-store, trust-store, etc. properties will be used.

This property is not applicable to the RESTEasy Client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_TLS_CONFIGURATION_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_TLS_CONFIGURATION_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-http2]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-http2[`quarkus.rest-client.http2`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.http2+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If this is true then HTTP/2 will be enabled.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_HTTP2+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_HTTP2+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-rest-client-config_quarkus-rest-client-http2-upgrade-max-content-length]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-http2-upgrade-max-content-length[`quarkus.rest-client.http2-upgrade-max-content-length`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.http2-upgrade-max-content-length+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Configures the HTTP/2 upgrade maximum length of the aggregated content in bytes.

This property is not applicable to the RESTEasy Client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_HTTP2_UPGRADE_MAX_CONTENT_LENGTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_HTTP2_UPGRADE_MAX_CONTENT_LENGTH+++`
endif::add-copy-button-to-env-var[]
--
|MemorySize link:#memory-size-note-anchor-quarkus-rest-client-config_quarkus-rest-client[icon:question-circle[title=More information about the MemorySize format]]
|`+++64K+++`

a| [[quarkus-rest-client-config_quarkus-rest-client-max-chunk-size]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-max-chunk-size[`quarkus.rest-client.max-chunk-size`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.max-chunk-size+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Configures two different things:

 - The max HTTP chunk size, up to `Integer.MAX_VALUE` bytes.
 - The size of the chunk to be read when an `InputStream` is being used as an input



Can be overwritten by client-specific settings.

This property is not applicable to the RESTEasy Client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_MAX_CHUNK_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_MAX_CHUNK_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|MemorySize link:#memory-size-note-anchor-quarkus-rest-client-config_quarkus-rest-client[icon:question-circle[title=More information about the MemorySize format]]
|`+++8k+++`

a| [[quarkus-rest-client-config_quarkus-rest-client-enable-compression]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-enable-compression[`quarkus.rest-client.enable-compression`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.enable-compression+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Supports receiving compressed messages using GZIP. When this feature is enabled and a server returns a response that includes the header `Content-Encoding: gzip`, REST Client will automatically decode the content and proceed with the message handling.

This property is not applicable to the RESTEasy Client.

Can be overwritten by client-specific settings.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_ENABLE_COMPRESSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_ENABLE_COMPRESSION+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a| [[quarkus-rest-client-config_quarkus-rest-client-alpn]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-alpn[`quarkus.rest-client.alpn`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.alpn+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If the Application-Layer Protocol Negotiation is enabled, the client will negotiate which protocol to use over the protocols exposed by the server. By default, it will try to use HTTP/2 first and if it's not enabled, it will use HTTP/1.1. When the property `http2` is enabled, this flag will be automatically enabled.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_ALPN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_ALPN+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a| [[quarkus-rest-client-config_quarkus-rest-client-capture-stacktrace]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-capture-stacktrace[`quarkus.rest-client.capture-stacktrace`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.capture-stacktrace+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If `true`, the stacktrace of the invocation of the REST Client method is captured. This stacktrace will be used if the invocation throws an exception


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_CAPTURE_STACKTRACE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_CAPTURE_STACKTRACE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-rest-client-config_quarkus-rest-client-logging-scope]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-logging-scope[`quarkus.rest-client.logging.scope`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.logging.scope+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Scope of logging for the client.  +
WARNING: beware of logging sensitive data  +
The possible values are:

 - `request-response` - enables logging request and responses, including redirect responses
 - `all` - enables logging requests and responses and lower-level logging
 - `none` - no additional logging

This property is applicable to reactive REST clients only.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_LOGGING_SCOPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_LOGGING_SCOPE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-logging-body-limit]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-logging-body-limit[`quarkus.rest-client.logging.body-limit`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client.logging.body-limit+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
How many characters of the body should be logged. Message body can be large and can easily pollute the logs.

By default, set to 100.

This property is applicable to reactive REST clients only.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT_LOGGING_BODY_LIMIT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT_LOGGING_BODY_LIMIT+++`
endif::add-copy-button-to-env-var[]
--
|int
|`+++100+++`

a|icon:lock[title=Fixed at build time] [[quarkus-rest-client-config_quarkus-rest-client-clients-scope]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-clients-scope[`quarkus.rest-client."clients".scope`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."clients".scope+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The CDI scope to use for injection. This property can contain either a fully qualified class name of a CDI scope annotation (such as "jakarta.enterprise.context.ApplicationScoped") or its simple name (such as "ApplicationScoped"). By default, this is not set which means the interface is not registered as a bean unless it is annotated with `RegisterRestClient`. If an interface is not annotated with `RegisterRestClient` and this property is set, then Quarkus will make the interface a bean of the configured scope.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENTS__SCOPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENTS__SCOPE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-rest-client-config_quarkus-rest-client-clients-enable-local-proxy]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-clients-enable-local-proxy[`quarkus.rest-client."clients".enable-local-proxy`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."clients".enable-local-proxy+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If set to true, then Quarkus will ensure that all calls from the REST client go through a local proxy server (that is managed by Quarkus). This can be very useful for capturing network traffic to a service that uses HTTPS.

This property is not applicable to the RESTEasy Client, only the Quarkus REST client (formerly RESTEasy Reactive client).

This property only applicable to dev and test mode.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENTS__ENABLE_LOCAL_PROXY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENTS__ENABLE_LOCAL_PROXY+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a|icon:lock[title=Fixed at build time] [[quarkus-rest-client-config_quarkus-rest-client-clients-local-proxy-provider]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-clients-local-proxy-provider[`quarkus.rest-client."clients".local-proxy-provider`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."clients".local-proxy-provider+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
This setting is used to select which proxy provider to use if there are multiple ones. It only applies if `enable-local-proxy` is true.

The algorithm for picking between multiple provider is the following:

 - If only the default is around, use it (its name is `default`)
 - If there is only one besides the default, use it
 - If there are multiple ones, fail


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENTS__LOCAL_PROXY_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENTS__LOCAL_PROXY_PROVIDER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-rest-client-config_quarkus-rest-client-clients-removes-trailing-slash]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-clients-removes-trailing-slash[`quarkus.rest-client."clients".removes-trailing-slash`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."clients".removes-trailing-slash+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If true, the extension will automatically remove the trailing slash in the paths if any. This property is not applicable to the RESTEasy Client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENTS__REMOVES_TRAILING_SLASH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENTS__REMOVES_TRAILING_SLASH+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

a| [[quarkus-rest-client-config_quarkus-rest-client-client-url]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-url[`quarkus.rest-client."client".url`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".url+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The base URL to use for this service. This property or the `uri` property is considered required, unless the `baseUri` attribute is configured in the `@RegisterRestClient` annotation.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__URL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__URL+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-uri]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-uri[`quarkus.rest-client."client".uri`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".uri+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The base URI to use for this service. This property or the `url` property is considered required, unless the `baseUri` attribute is configured in the `@RegisterRestClient` annotation.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__URI+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__URI+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-override-uri]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-override-uri[`quarkus.rest-client."client".override-uri`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".override-uri+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
This property is only meant to be set by advanced configurations to override whatever value was set for the uri or url. The override is done using the REST Client class name configuration syntax.

This property is not applicable to the RESTEasy Client, only the Quarkus Rest client (formerly RESTEasy Reactive client).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__OVERRIDE_URI+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__OVERRIDE_URI+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-providers]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-providers[`quarkus.rest-client."client".providers`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".providers+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Map where keys are fully-qualified provider classnames to include in the client, and values are their integer priorities. The equivalent of the `@RegisterProvider` annotation.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__PROVIDERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__PROVIDERS+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-connect-timeout]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-connect-timeout[`quarkus.rest-client."client".connect-timeout`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".connect-timeout+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Timeout specified in milliseconds to wait to connect to the remote endpoint.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__CONNECT_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__CONNECT_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--
|long
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-read-timeout]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-read-timeout[`quarkus.rest-client."client".read-timeout`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".read-timeout+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Timeout specified in milliseconds to wait for a response from the remote endpoint.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__READ_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__READ_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--
|long
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-follow-redirects]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-follow-redirects[`quarkus.rest-client."client".follow-redirects`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".follow-redirects+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
A boolean value used to determine whether the client should follow HTTP redirect responses.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__FOLLOW_REDIRECTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__FOLLOW_REDIRECTS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-multipart-post-encoder-mode]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-multipart-post-encoder-mode[`quarkus.rest-client."client".multipart-post-encoder-mode`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".multipart-post-encoder-mode+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Mode in which the form data are encoded. Possible values are `HTML5`, `RFC1738` and `RFC3986`. The modes are described in the link:https://netty.io/4.1/api/io/netty/handler/codec/http/multipart/HttpPostRequestEncoder.EncoderMode.html[Netty documentation]

By default, Rest Client Reactive uses RFC1738.

This property is not applicable to the RESTEasy Client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__MULTIPART_POST_ENCODER_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__MULTIPART_POST_ENCODER_MODE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-proxy-address]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-proxy-address[`quarkus.rest-client."client".proxy-address`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".proxy-address+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
A string value in the form of `:` that specifies the HTTP proxy server hostname (or IP address) and port for requests of this client to use.

Use `none` to disable proxy


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__PROXY_ADDRESS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__PROXY_ADDRESS+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-proxy-user]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-proxy-user[`quarkus.rest-client."client".proxy-user`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".proxy-user+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Proxy username.

This property is not applicable to the RESTEasy Client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__PROXY_USER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__PROXY_USER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-proxy-password]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-proxy-password[`quarkus.rest-client."client".proxy-password`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".proxy-password+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Proxy password.

This property is not applicable to the RESTEasy Client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__PROXY_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__PROXY_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-non-proxy-hosts]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-non-proxy-hosts[`quarkus.rest-client."client".non-proxy-hosts`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".non-proxy-hosts+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Hosts to access without proxy

This property is not applicable to the RESTEasy Client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__NON_PROXY_HOSTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__NON_PROXY_HOSTS+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-query-param-style]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-query-param-style[`quarkus.rest-client."client".query-param-style`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".query-param-style+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
An enumerated type string value with possible values of "MULTI_PAIRS" (default), "COMMA_SEPARATED", or "ARRAY_PAIRS" that specifies the format in which multiple values for the same query parameter is used.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__QUERY_PARAM_STYLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__QUERY_PARAM_STYLE+++`
endif::add-copy-button-to-env-var[]
--
a|`multi-pairs`, `comma-separated`, `array-pairs`
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-verify-host]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-verify-host[`quarkus.rest-client."client".verify-host`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".verify-host+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Set whether hostname verification is enabled. Default is enabled. This setting should not be disabled in production as it makes the client vulnerable to MITM attacks.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__VERIFY_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__VERIFY_HOST+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-trust-store]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-trust-store[`quarkus.rest-client."client".trust-store`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".trust-store+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The trust store location. Can point to either a classpath resource or a file.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__TRUST_STORE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__TRUST_STORE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-trust-store-password]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-trust-store-password[`quarkus.rest-client."client".trust-store-password`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".trust-store-password+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The trust store password.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__TRUST_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__TRUST_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-trust-store-type]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-trust-store-type[`quarkus.rest-client."client".trust-store-type`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".trust-store-type+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The type of the trust store. Defaults to "JKS".


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__TRUST_STORE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__TRUST_STORE_TYPE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-key-store]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-key-store[`quarkus.rest-client."client".key-store`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".key-store+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The key store location. Can point to either a classpath resource or a file.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__KEY_STORE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__KEY_STORE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-key-store-password]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-key-store-password[`quarkus.rest-client."client".key-store-password`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".key-store-password+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The key store password.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__KEY_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__KEY_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-key-store-type]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-key-store-type[`quarkus.rest-client."client".key-store-type`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".key-store-type+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The type of the key store. Defaults to "JKS".


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__KEY_STORE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__KEY_STORE_TYPE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-hostname-verifier]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-hostname-verifier[`quarkus.rest-client."client".hostname-verifier`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".hostname-verifier+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The class name of the host name verifier. The class must have a public no-argument constructor.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__HOSTNAME_VERIFIER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__HOSTNAME_VERIFIER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-tls-configuration-name]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-tls-configuration-name[`quarkus.rest-client."client".tls-configuration-name`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".tls-configuration-name+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The name of the TLS configuration to use.

If a name is configured, it uses the configuration from `quarkus.tls.<name>.++*++` If a name is configured, but no TLS configuration is found with that name then an error will be thrown. The default TLS configuration will be ignored.

If no named TLS configuration is set, then the key-store, trust-store, etc. properties will be used.

This property is not applicable to the RESTEasy Client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__TLS_CONFIGURATION_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__TLS_CONFIGURATION_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-connection-ttl]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-connection-ttl[`quarkus.rest-client."client".connection-ttl`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".connection-ttl+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The time in ms for which a connection remains unused in the connection pool before being evicted and closed. A timeout of `0` means there is no timeout.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__CONNECTION_TTL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__CONNECTION_TTL+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-connection-pool-size]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-connection-pool-size[`quarkus.rest-client."client".connection-pool-size`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".connection-pool-size+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The size of the connection pool for this client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__CONNECTION_POOL_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__CONNECTION_POOL_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|int
|`+++50+++`

a| [[quarkus-rest-client-config_quarkus-rest-client-client-keep-alive-enabled]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-keep-alive-enabled[`quarkus.rest-client."client".keep-alive-enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".keep-alive-enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If set to false disables the keep alive completely.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__KEEP_ALIVE_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__KEEP_ALIVE_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-max-redirects]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-max-redirects[`quarkus.rest-client."client".max-redirects`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".max-redirects+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The maximum number of redirection a request can follow.

This property is not applicable to the RESTEasy Client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__MAX_REDIRECTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__MAX_REDIRECTS+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-same-origin-redirect-blocked-headers]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-same-origin-redirect-blocked-headers[`quarkus.rest-client."client".same-origin-redirect-blocked-headers`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".same-origin-redirect-blocked-headers+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The set of HTTP headers that are removed on same-origin redirect responses.

When not set, the global setting or the Vert.x default is used.

This property is not applicable to the RESTEasy Client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__SAME_ORIGIN_REDIRECT_BLOCKED_HEADERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__SAME_ORIGIN_REDIRECT_BLOCKED_HEADERS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-cross-origin-redirect-blocked-headers]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-cross-origin-redirect-blocked-headers[`quarkus.rest-client."client".cross-origin-redirect-blocked-headers`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".cross-origin-redirect-blocked-headers+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The set of HTTP headers that are removed on cross-origin redirect responses.

When not set, the global setting or the Vert.x default is used.

This property is not applicable to the RESTEasy Client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__CROSS_ORIGIN_REDIRECT_BLOCKED_HEADERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__CROSS_ORIGIN_REDIRECT_BLOCKED_HEADERS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-headers-header-name]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-headers-header-name[`quarkus.rest-client."client".headers."header-name"`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".headers."header-name"+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The HTTP headers that should be applied to all requests of the rest client.

This property is not applicable to the RESTEasy Client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__HEADERS__HEADER_NAME_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__HEADERS__HEADER_NAME_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-shared]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-shared[`quarkus.rest-client."client".shared`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".shared+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Set to true to share the HTTP client between REST clients. There can be multiple shared clients distinguished by _name_, when no specific name is set, the name `__vertx.DEFAULT` is used.

This property is not applicable to the RESTEasy Client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__SHARED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__SHARED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-name]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-name[`quarkus.rest-client."client".name`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".name+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Set the HTTP client name, used when the client is shared, otherwise ignored.

This property is not applicable to the RESTEasy Client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-user-agent]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-user-agent[`quarkus.rest-client."client".user-agent`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".user-agent+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Configure the HTTP user-agent header to use.

This property is not applicable to the RESTEasy Client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__USER_AGENT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__USER_AGENT+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-http2]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-http2[`quarkus.rest-client."client".http2`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".http2+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If this is true then HTTP/2 will be enabled.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__HTTP2+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__HTTP2+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-http2-upgrade-max-content-length]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-http2-upgrade-max-content-length[`quarkus.rest-client."client".http2-upgrade-max-content-length`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".http2-upgrade-max-content-length+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Configures the HTTP/2 upgrade maximum length of the aggregated content in bytes.

This property is not applicable to the RESTEasy Client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__HTTP2_UPGRADE_MAX_CONTENT_LENGTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__HTTP2_UPGRADE_MAX_CONTENT_LENGTH+++`
endif::add-copy-button-to-env-var[]
--
|MemorySize link:#memory-size-note-anchor-quarkus-rest-client-config_quarkus-rest-client[icon:question-circle[title=More information about the MemorySize format]]
|`+++64K+++`

a| [[quarkus-rest-client-config_quarkus-rest-client-client-max-chunk-size]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-max-chunk-size[`quarkus.rest-client."client".max-chunk-size`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".max-chunk-size+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Configures two different things:

 - The max HTTP chunk size, up to `Integer.MAX_VALUE` bytes.
 - The size of the chunk to be read when an `InputStream` is being read and sent to the server



This property is not applicable to the RESTEasy Client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__MAX_CHUNK_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__MAX_CHUNK_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|MemorySize link:#memory-size-note-anchor-quarkus-rest-client-config_quarkus-rest-client[icon:question-circle[title=More information about the MemorySize format]]
|`+++8K+++`

a| [[quarkus-rest-client-config_quarkus-rest-client-client-enable-compression]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-enable-compression[`quarkus.rest-client."client".enable-compression`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".enable-compression+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Supports receiving compressed messages using GZIP. When this feature is enabled and a server returns a response that includes the header `Content-Encoding: gzip`, REST Client will automatically decode the content and proceed with the message handling.

This property is not applicable to the RESTEasy Client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__ENABLE_COMPRESSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__ENABLE_COMPRESSION+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-alpn]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-alpn[`quarkus.rest-client."client".alpn`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".alpn+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If the Application-Layer Protocol Negotiation is enabled, the client will negotiate which protocol to use over the protocols exposed by the server. By default, it will try to use HTTP/2 first and if it's not enabled, it will use HTTP/1.1. When the property `http2` is enabled, this flag will be automatically enabled.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__ALPN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__ALPN+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-capture-stacktrace]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-capture-stacktrace[`quarkus.rest-client."client".capture-stacktrace`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".capture-stacktrace+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If `true`, the stacktrace of the invocation of the REST Client method is captured. This stacktrace will be used if the invocation throws an exception


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__CAPTURE_STACKTRACE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__CAPTURE_STACKTRACE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-disable-default-mapper]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-disable-default-mapper[`quarkus.rest-client."client".disable-default-mapper`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".disable-default-mapper+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If set to `true`, then this REST Client will not the default exception mapper which always throws an exception if HTTP response code >= 400. This property is not applicable to the RESTEasy Client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__DISABLE_DEFAULT_MAPPER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__DISABLE_DEFAULT_MAPPER+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-rest-client-config_quarkus-rest-client-client-logging-scope]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-logging-scope[`quarkus.rest-client."client".logging.scope`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".logging.scope+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Scope of logging for the client.  +
WARNING: beware of logging sensitive data  +
The possible values are:

 - `request-response` - enables logging request and responses, including redirect responses
 - `all` - enables logging requests and responses and lower-level logging
 - `none` - no additional logging

This property is applicable to reactive REST clients only.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__LOGGING_SCOPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__LOGGING_SCOPE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-rest-client-config_quarkus-rest-client-client-logging-body-limit]] [.property-path]##link:#quarkus-rest-client-config_quarkus-rest-client-client-logging-body-limit[`quarkus.rest-client."client".logging.body-limit`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.rest-client."client".logging.body-limit+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
How many characters of the body should be logged. Message body can be large and can easily pollute the logs.

By default, set to 100.

This property is applicable to reactive REST clients only.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CLIENT__LOGGING_BODY_LIMIT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CLIENT__LOGGING_BODY_LIMIT+++`
endif::add-copy-button-to-env-var[]
--
|int
|`+++100+++`

|===

ifndef::no-memory-size-note[]
[NOTE]
[id=memory-size-note-anchor-quarkus-rest-client-config_quarkus-rest-client]
.About the MemorySize format
====
A size configuration option recognizes strings in this format (shown as a regular expression): `[0-9]+[KkMmGgTtPpEeZzYy]?`.

If no suffix is given, assume bytes.
====
endif::no-memory-size-note[]
